Modified Hello HTML file

--- a/HTML Demo/hello.html
+++ b/HTML Demo/hello.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Hello</title>
-</head>
-<body>
-	<!-- Here goes Comment -->
-	<h1>Hello</h1>
-	<p>I am <strong>Prateek Bose</strong>.<br>I study <em>engineering</em>.</p>
-	Here's my <a href="https://www.instagram.com/vrtg025/">Instagram</a> link.
-	<ol>
-		<li>Red</li>
-		<li>Orange</li>
-	</ol>
-	<ul>
-		<li>Red</li>
-		<li>Orange</li>
-	</ul>
-</body>
+<html lang="en" dir="ltr">
+	<head>
+		<meta charset="utf-8">
+		<title>Hello</title>
+	</head>
+	<body>
+		<!-- Here goes Comment -->
+		<h1>Hello</h1>
+		<p>
+			I am <strong>Prateek Bose</strong>.
+			<br>
+			I am an <em>engineering</em> student.
+		</p>
+		Here's my Instagram link.
+		<br>
+		<a href="https://www.instagram.com/vrtg025/">vrtg025</a>
+		<ol>
+			<li>Red</li>
+			<li>Orange</li>
+		</ol>
+		<ul>
+			<li>Red</li>
+			<li>Orange</li>
+		</ul>
+	</body>
 </html>
